Utilize DynamoDB quick lookup